--- a/handlebars/registration.handlebars
+++ b/handlebars/registration.handlebars
@@ -21,8 +21,9 @@
               margin-bottom:10px;
               line-height: 33px;
               text-transform: uppercase;
+              vertical-align: middle;
               display: flex;
-              align-items: center"
+              align-items: center;"
             >
               <img src="https://dev.raptoreum.zone/raptoreum-zone.svg" width="40">
               <span style="color: rgb(27, 33, 35);">raptoreum</span>
