--- a/handlebars/registration.handlebars
+++ b/handlebars/registration.handlebars
@@ -21,13 +21,13 @@
               margin-bottom:10px;
               line-height: 33px;
               text-transform: uppercase;
-              vertical-align: middle;
-              display: flex;
-              align-items: center;"
+              vertical-align: middle;"
             >
-              <img src="https://dev.raptoreum.zone/raptoreum-zone.svg" width="40">
-              <span style="color: rgb(27, 33, 35);">raptoreum</span>
-              <span style="color: rgb(132, 138, 139);">.zone</span>
+              <div style="display: flex; align-items: center;">
+                <img src="https://dev.raptoreum.zone/raptoreum-zone.svg" width="40">
+                <span style="color: rgb(27, 33, 35);">raptoreum</span>
+                <span style="color: rgb(132, 138, 139);">.zone</span>
+              </div>
             </td>
           </tr>
           <tr>
