--- a/handlebars/inactive-miners.handlebars
+++ b/handlebars/inactive-miners.handlebars
@@ -40,7 +40,7 @@
               >
                 <tr>
                   <td align="center" style="font-weight: 700;font-size: 20px;">
-                    <span style="color: rgb(222, 133, 48);">{{ inactiveMiners }}</span> of {{ totalMiners }} workers went offline
+                    <span style="color: rgb(222, 133, 48);">{{ inactiveMiners }}</span> workers went offline
                   </td>
                 </tr>
                 <tr>
