--- a/handlebars/registration.handlebars
+++ b/handlebars/registration.handlebars
@@ -24,7 +24,7 @@
               vertical-align: middle;"
             >
               <div style="display: flex; align-items: center;">
-                <img src="https://dev.raptoreum.zone/raptoreum-zone.svg" width="40">
+                <img src="https://raptoreum.zone/raptoreum-zone.svg" width="40">
                 <span style="color: rgb(27, 33, 35);">raptoreum</span>
                 <span style="color: rgb(132, 138, 139);">.zone</span>
               </div>
